--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>BRONCO PVT. LTD.</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://pn31.github.io/bronco/style.css">
   </head>
   <body>
     <div class="d1">
