--- a/index.html
+++ b/index.html
@@ -1,24 +1,42 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>BRONCO PVT. LTD.</title>
-    <link rel="stylesheet" href="https://pn31.github.io/bronco/style.css">
-  </head>
-  <body>
-    <div class="d1">
-      
+
+<head>
+  <meta charset="utf-8">
+  <title>BRONCO PVT. LTD.</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+  <div class="d1">
+      <header>
+        <h1>WELCOME</h1>
+
+        <nav>
+          <a  href="home.html">HOME</a>
+        </nav>
+
+  </header>
+
+  </div>
+
+      <div class="d2">
+                <div class="d3">
+                  <img src="bronco.png" alt="bronco-logo">
+                </div>
 
       </div>
-      <div class="d2">
-           <div class="d3">
-           <img src="bronco.png" alt="bronco-logo">
+
+    <div class="d4">
+                <div class="d5">
+                  <img src="mki.png" alt="Make in India-logo">
+                </div>
+
+    </div>
 
 
-          </div>
 
 
+</body>
 
-        </div>
-  </body>
 </html>
