--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>BRONCO PVT. LTD.</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href=" https://pn31.github.io/bronco/style.css">
 </head>
 
 <body>
