--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>BRONCO PVT. LTD.</title>
-  <link rel="stylesheet" href=" https://pn31.github.io/bronco/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
         </nav>
 
   </header>
-
+ 
   </div>
 
       <div class="d2">
